@@ -245,8 +245,8 @@ static char *MergeHelp[] = {
 
 static char *SplitHelp[] = {
     "NAME",
-    "    splitcode, splitname, splitlevel, splitgrid, splitzaxis, splittabnum - ",
-    "    Split a dataset",
+    "    splitcode, splitparam, splitname, splitlevel, splitgrid, splitzaxis, ",
+    "    splittabnum - Split a dataset",
     "",
     "SYNOPSIS",
     "    <operator>  ifile obase",
@@ -260,6 +260,9 @@ static char *SplitHelp[] = {
     "    splitcode    Split code numbers",
     "                 Splits a dataset into pieces, one for each different code number.",
     "                 xxx will have three digits with the code number.",
+    "    splitparam   Split parammeter identifiers",
+    "                 Splits a dataset into pieces, one for each different parammeter identifier.",
+    "                 xxx will be a string with the parammeter identifier.",
     "    splitname    Split variable names",
     "                 Splits a dataset into pieces, one for each variable name.",
     "                 xxx will be a string with the variable name.",
@@ -358,8 +361,8 @@ static char *SelvarHelp[] = {
     "    delparam,params  ifile ofile",
     "    selcode,codes  ifile ofile",
     "    delcode,codes  ifile ofile",
-    "    selname,varnames  ifile ofile",
-    "    delname,varnames  ifile ofile",
+    "    selname,names  ifile ofile",
+    "    delname,names  ifile ofile",
     "    selstdname,stdnames  ifile ofile",
     "    sellevel,levels  ifile ofile",
     "    sellevidx,levidx  ifile ofile",
@@ -376,7 +379,7 @@ static char *SelvarHelp[] = {
     "    selparam    Select parameters by identifier",
     "                Selects all fields with parameter identifiers in a user given list.",
     "    delparam    Delete parameters by identifier",
-    "                Deletes all fields with parameter ideniifiers in a user given list.",
+    "                Deletes all fields with parameter identifiers in a user given list.",
     "    selcode     Select parameters by code number",
     "                Selects all fields with code numbers in a user given list.",
     "    delcode     Delete parameters by code number",
@@ -403,7 +406,7 @@ static char *SelvarHelp[] = {
     "PARAMETER",
     "    params    INTEGER  Comma separated list of parameter identifiers",
     "    codes     INTEGER  Comma separated list of code numbers",
-    "    varnames  STRING   Comma separated list of variable names",
+    "    names     STRING   Comma separated list of variable names",
     "    stdnames  STRING   Comma separated list of standard names",
     "    levels    FLOAT    Comma separated list of levels",
     "    levidx    INTEGER  Comma separated list of index of levels",
