@@ -10,6 +10,7 @@ Version 1.5.0 (?? March 2011):
    New operators:
      * selparam: Select parameters by identifier
      * delparam: Delete parameters by identifier
+     * splitparam: Split parameter identifiers
    Changed operators:
      * expr: added functions abs(), int(), nint(), sqr()
      * sinfo: changed output of table and code number to parameter identifier
